style: 코딩스타일 xml를 설정하여 스타일 적용